--- a/src/styles/components/maincontent.sass
+++ b/src/styles/components/maincontent.sass
@@ -20,8 +20,15 @@
         gap: 1rem
 
         &:after
-             @include mixins.gradient-border
-            
+            @include mixins.gradient-border
+
+    h3
+        color: variables.$text-color
+        font-size: 1.5rem
+        margin-bottom: 1.3rem
+        @include mixins.center
+        justify-content: start
+        gap: 1rem            
 
     p
         color: variables.$text-color-secondary
